[project]
name = "mykernel"
version = "1.0.0"
description = "My kernel scripts to compile it in Gentoo systems"
authors = [
    {name = "turulomio",email = "turulomio@yahoo.es"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "colorama >=0.4.6",
    "pydicts >=1.1.0", 
    "configparser-rb >=1.0.0"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
poetry = ">=2.3.2"
poethepoet = ">=0.42.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://github.com/turulomio/mykernel/"
repository = "https://github.com/turulomio/mykernel/"
changelog = "https://github.com/turulomio/mykernel#changelog"

[tool.poetry.scripts]
mykernel = 'mykernel.mykernel_compile:main'


[tool.poe.tasks]
translate = { script = "mykernel.poethepoet:translate" }
release = { script = "mykernel.poethepoet:release" }
reusing = { script = "mykernel.poethepoet:reusing" }
mangenerator = { script = "mykernel.poethepoet:mangenerator" }

